# MPPI4Rob

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
controllers/: mppi_controller.py
examples/: pendulum_example.py  pendulum_full.py  pendulum_residual.py  pendulum_residual_example.py
models/: baseline_policy.py  cost_function.py  observation.py  transition_model.py
tests/: __init__.py  conftest.py  test_mppi_basic.py
utils/: torch_utils.py
