[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mppi4rob"
version = "0.1.0"
description = "A lightweight MPPI controller library for robotics using PyTorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "lengtx20"}
]
keywords = ["MPPI", "robotics", "control", "PyTorch", "model-predictive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "gymnasium>=0.28.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "matplotlib>=3.3.0",
]
examples = [
    "matplotlib>=3.3.0",
    "gymnasium>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/lengtx20/MPPI4Rob"
Repository = "https://github.com/lengtx20/MPPI4Rob.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for the full pipeline",
    "gpu: Tests that require GPU",
]

[tool.coverage.run]
source = ["models", "controllers", "utils"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
